# pto-dsl

./: .gitignore  README.md  pyproject.toml
docker/: Dockerfile  README.md
examples/: README.md
examples/aot/add_dynamic_multicore/: add_builder.py  add_double_builder.py
examples/aot/add_static_multicore/: add_builder.py
examples/aot/fast_hadamard/: compile.sh  hadamard_builder.py  run_hadamard.py
examples/aot/fast_inverse/: README.md  caller.cpp  compile.sh  inverse_builder.py  run_inverse.py
examples/aot/geglu_dynamic_multicore/: geglu_builder.py
examples/aot/matmul_dynbatch_multicore/: matmul_builder.py
examples/aot/matmul_dynbatch_multicore_2buf/: matmul_dsl.py
examples/aot/matmul_dynbatch_multicore_opt/: matmul_builder.py
examples/aot/matmul_optimization_guide/: compile.sh  mamtul_optim_guide_zh.md  matmul_optim_guide.md
examples/aot/matmul_static_singlecore/: matmul_builder.py
examples/aot/print_tile/: compile.sh
examples/aot/relu_dynamic_multicore/: relu_builder.py
examples/aot/topk/: compile.sh  run_topk.py  topk_builder.py
examples/jit/add_dynamic_multicore/: run_add.py
examples/jit/add_static_multicore/: run_add_1d.py  (+1 more)
ptodsl/: __init__.py  bench.py  pto.py  scalar.py  test_util.py  tile.py
ptodsl/api/: __init__.py  control_flow.py  pto.py  pto_general.py  scalar.py  synchronization.py  tile.py  type_def.py
ptodsl/compiler/: __init__.py  ir.py  jit.py
ptodsl/utils/: __init__.py  bench.py  npu_info.py  test_util.py
tests/frontend/: test_add_dynamic_ir.py  test_add_ir.py  test_matmul_dynamic_ir.py  test_multifunc_ir.py
(+62 files in other folders)
